<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.group_0862.triage.NewVisitActivity" >
    
    <RadioGroup
        android:id="@+id/radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
        
        <RadioButton android:id="@+id/radio_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_patient"/>
        
        <RadioButton android:id="@+id/radio_returning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returning"/>
    
    </RadioGroup>
    
    <TextView
        android:id="@+id/dash1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/year"
        android:layout_alignBottom="@+id/year"
        android:layout_toRightOf="@+id/year"
        android:text="@string/dash"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/month"
        android:layout_alignBottom="@+id/month"
        android:layout_toRightOf="@+id/month"
        android:text="@string/dash"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/year"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/day"
        android:layout_alignBottom="@+id/day"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="date" />

    <EditText
        android:id="@+id/month"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dash1"
        android:layout_toRightOf="@+id/dash1"
        android:ems="10"
        android:hint="@string/month"
        android:inputType="date" />

    <EditText
        android:id="@+id/day"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/dash2"
        android:ems="10"
        android:hint="@string/day"
        android:inputType="date" />

    <EditText
        android:id="@+id/health_num_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputName"
        android:layout_alignParentTop="false"
        android:layout_below="@id/radio_button"
        android:ems="10"
        android:hint="@string/health_num_optional"
        android:inputType="number|numberDecimal" />

    <TextView
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newPatientSign"
        android:layout_marginTop="20dp"
        android:text="@string/enter_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputName"
        android:layout_below="@+id/inputName"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/inputBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/year"
        android:layout_alignLeft="@+id/full_name"
        android:text="@string/birthdate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/newPatientSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/health_num_input"
        android:layout_below="@+id/health_num_input"
        android:text="@string/new_patient_sign"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/returning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/year"
        android:layout_below="@+id/year"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="register"
        android:text="@string/register"
        android:textColorLink="@android:color/holo_blue_bright" />

</RelativeLayout>